--- a/src/index.html
+++ b/src/index.html
@@ -1,20 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Модуль 12</title>
+  </head>
+  <body>
+    <ul>
+      <li><a href="01-fetch-api.html">HTTP-запросы и Fetch API</a></li>
+      <li><a href="02-cors.html">Cross-Origin Resource Sharing</a></li>
+    </ul>
 
-<head>
-  <meta charset="UTF-8">
-  <title>GoIT74</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-
-<body>
-  <form id="form">
-    <input type="text" name="news" placeholder="Search news">
-    <input type="submit" value="Search">
-  </form>
-
-  <div id="newsWrapper"></div>
-  <script src="scripts/script.js" type="module"></script>
-</body>
-
+    <script src="index.js"></script>
+  </body>
 </html>
