--- a/src/01-fetch-api.html
+++ b/src/01-fetch-api.html
@@ -9,7 +9,11 @@
 </head>
 
 <body>
+    <p><a href="index.html">На главную</a></p>
 
+
+
+    <script src="js/01-fetch-api.js"></script>
 </body>
 
 </html>
