--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,8 @@
 <body>
   <ul>
     <li><a href="01-fetch-api.html">HTTP-запросы и Fetch API</a></li>
+    <li><a href="02-news.html">News</a></li>
+
   </ul>
 </body>
 
