--- a/src/02-news.html
+++ b/src/02-news.html
@@ -23,7 +23,7 @@
     </ul>
 
     <button type="button" class="btn js-load-more">Load More</button>
-    <script src="js/02-news.js"></script>
+    <script src="js/02-news.js" type="module"></script>
 </body>
 
 </html>
