--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
   <ul>
     <li><a href="01-fetch-api.html">HTTP-запросы и Fetch API</a></li>
     <li><a href="02-news.html">News</a></li>
+    <li><a href="03-heroes.html">Heroes</a></li>
 
   </ul>
 </body>
