--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
     <li><a href="01-fetch-api.html">HTTP-запросы и Fetch API</a></li>
     <li><a href="02-news.html">News</a></li>
     <li><a href="03-heroes.html">Heroes</a></li>
+    <li><a href="04-film.html">Film</a></li>
 
   </ul>
 </body>
