--- a/src/04-film.html
+++ b/src/04-film.html
@@ -10,7 +10,8 @@
 
 <body>
     <p><a href="index.html">На главную</a></p>
-
+    <ul class="js-list film">
+    </ul>
 
     <button type="button" class="btn js-load-more">Load More</button>
     <script src="js/04-film.js" type="module"></script>
