--- a/src/04-film.html
+++ b/src/04-film.html
@@ -10,10 +10,11 @@
 
 <body>
     <p><a href="index.html">На главную</a></p>
-    <ul class="js-list film">
+    <ul class="js-list">
+
     </ul>
 
-    <button type="button" class="btn js-load-more">Load More</button>
+    <button type="button" class="btn js-load-more" hidden>Load More</button>
     <script src="js/04-film.js" type="module"></script>
 </body>
 
