--- a/src/04-film.html
+++ b/src/04-film.html
@@ -6,10 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTTP-запросы и Fetch API</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <p><a href="index.html">На главную</a></p>
+    <button type="button" class="btn js-load-more" hidden>Load More</button>
     <ul class="js-list">
 
     </ul>
