--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
     <li><a href="02-news.html">News</a></li>
     <li><a href="03-heroes.html">Heroes</a></li>
     <li><a href="04-film.html">Film</a></li>
+    <li><a href="05-observer.html">observer</a></li>
 
   </ul>
 </body>
