--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
     <li><a href="03-heroes.html">Heroes</a></li>
     <li><a href="04-film.html">Film</a></li>
     <li><a href="05-observer.html">observer</a></li>
+    <li><a href="06-meest.html">Meest</a></li>
 
   </ul>
 </body>
