--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
     <li><a href="04-film.html">Film</a></li>
     <li><a href="05-observer.html">observer</a></li>
     <li><a href="06-meest.html">Meest</a></li>
+    <li><a href="07-p24.html">Privat24</a></li>
 
   </ul>
 </body>
