--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
     <li><a href="05-observer.html">observer</a></li>
     <li><a href="06-meest.html">Meest</a></li>
     <li><a href="07-p24.html">Privat24</a></li>
-
+    <li><a href="08-weather.html">Weather</a></li>
   </ul>
 </body>
 
