--- a/src/08-weather.html
+++ b/src/08-weather.html
@@ -17,19 +17,14 @@
             <option value="3">3</option>
             <option value="5">5</option>
             <option value="7">7</option>
-            <option value="7">14</option>
+            <option value="7">10</option>
         </select>
         <button type="submit" class="js-btn-search">Search</button>
     </form>
+    <ul class="js-weather-container">
 
+    </ul>
 
-    <!-- <form class="js-search-form">
-        <div class="form-group">
-            <input type="text" class="form-control" name="query" />
-        </div>
-
-        <button type="submit" class="btn">Искать</button>
-    </form> -->
     <script src="js/08-w.js" type="module"></script>
 </body>
 
