--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
     <li><a href="06-meest.html">Meest</a></li>
     <li><a href="07-p24.html">Privat24</a></li>
     <li><a href="08-weather.html">Weather</a></li>
+    <li><a href="09-catfind.html">CatFind</a></li>
   </ul>
 </body>
 
