--- a/src/09-catfind.html
+++ b/src/09-catfind.html
@@ -18,6 +18,14 @@
 
         <button type="submit" class="btn">Искать</button>
     </form>
+    <button type="button" class="btn js-load-more" hidden>Load More</button>
+    <ul class="js-list">
+
+    </ul>
+
+    <button type="button" class="btn js-load-more" hidden>Load More</button>
+
+
     <script src="js/09-catefind.js" type="module"></script>
 </body>
 
