--- a/src/09-catfind.html
+++ b/src/09-catfind.html
@@ -22,7 +22,7 @@
     <ul class="js-list">
 
     </ul>
-
+    <div id="grid" class="imgrid"></div>
     <button type="button" class="btn js-load-more" hidden>Load More</button>
 
 
