--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
     <li><a href="07-p24.html">Privat24</a></li>
     <li><a href="08-weather.html">Weather</a></li>
     <li><a href="09-catfind.html">CatFind</a></li>
+    <li><a href="10-cat.html">CatFind</a></li>
   </ul>
 </body>
 
