--- a/src/10-cat.html
+++ b/src/10-cat.html
@@ -24,7 +24,7 @@
     </ul>
     <div id="grid" class="imgrid"></div>
     <button type="button" class="btn js-load-more" hidden>Load More</button>
-
+    <select id="dropdown"></select>
 
     <script src="js/10-cat.js" type="module"></script>
 </body>
