--- a/src/10-cat.html
+++ b/src/10-cat.html
@@ -27,7 +27,7 @@
     <button type="button" class="btn js-load-more" hidden>Load More</button>
     <select id="dropdown"></select>
 
-    <script src="js/10-cat.js" type="module"></script>
+    <script src="js/10/cat.js" type="module"></script>
 </body>
 
 </html>
