--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
     <li><a href="08-weather.html">Weather</a></li>
     <li><a href="09-catfind.html">CatFind</a></li>
     <li><a href="10-cat.html">CatFind</a></li>
+    <li><a href="11-crud.html">CRUD</a></li>
   </ul>
 </body>
 
