--- a/src/11-crud.html
+++ b/src/11-crud.html
@@ -7,6 +7,14 @@
 </head>
 <body>
     <p><a href="index.html">На главную</a></p>
+
+<div>
+    <img src="https://cdn2.thecatapi.com/images/VZ3qFLIe3.jpg" alt="cat" width="375" height="468">
+    <button class="js-add">Add comment</button>
+    <div class="js-form"></div>
+    <ul class="js-posts">
+    </ul>
+</div>
     <script src="js/11-crud.js" type="module"></script>  
 </body>
 </html>
