--- a/src/11-crud.html
+++ b/src/11-crud.html
@@ -11,6 +11,7 @@
 <div>
     <img src="https://cdn2.thecatapi.com/images/VZ3qFLIe3.jpg" alt="cat" width="375" height="468">
     <button class="js-add">Add comment</button>
+    <p class = 'js-error'></p>
     <div class="js-form"></div>
     <ul class="js-posts">
     </ul>
