--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,7 @@
     <li><a href="09-catfind.html">CatFind</a></li>
     <li><a href="10-cat.html">CatFind</a></li>
     <li><a href="11-crud.html">CRUD</a></li>
+     <li><a href="12-await.html">AWAIT</a></li>
   </ul>
 </body>
 
