--- a/src/12-await.html
+++ b/src/12-await.html
@@ -6,10 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    
-
-
+    <form action="submit" class="js-form">
+        <input type="text">
+        <button>Search</button>
+    </form>
+<button class="js-add">Add country</button>
+<ul class="js-list"></ul>
 
     <script src="js/12-await.js" type="module"></script>  
 </body>
 </html>
+
