--- a/src/12-await.html
+++ b/src/12-await.html
@@ -7,7 +7,10 @@
 </head>
 <body>
     <form action="submit" class="js-form">
-        <input type="text">
+        <div class="js-form-container">
+        <input type="text" name="country">
+        </div>
+
         <button>Search</button>
     </form>
 <button class="js-add">Add country</button>
