--- a/src/12-await.html
+++ b/src/12-await.html
@@ -14,7 +14,9 @@
         <button>Search</button>
     </form>
 <button class="js-add">Add country</button>
-<ul class="js-list"></ul>
+<ul class="js-list">
+
+</ul>
 
     <script src="js/12-await.js" type="module"></script>  
 </body>
